0.5.4
 - fix: entrypoints not working (#6, #10)
0.5.3
 - setup: bump numpy to 1.25.1
 - tests: workaround for broken numpy repr
0.5.2
 - docs: cleanup readme
0.5.1
 - ci: fix automated pipeline
0.5.0
 - BREAKING CHANGE: remove the igorpy compatibility layer
 - docs: include Readme.rst for description on PyPI
 - tests: migrate to pytest best as possible
 - ref: remove hard-coded logging statement from __init__
 - ref: flake8
 - ref: remove clutter LGPL notices, nobody does that anymore and
   the LGPL is advertised sufficiently elsewhere
0.4.0
 - fix: merge all pull requests to original igor project (#1, #2, #3)
 - setup: migrate to pyproject.toml